tests/rosetta/transpiler/Java/conditional-structures-3.java
public class Main {
    static void example3(boolean a, boolean b) {
        if (a) {
            null;
        } else         if (b) {
            null;
        }
    }
    public static void main(String[] args) {
    }
}
